--- a/.github/workflows/corne-choc.yml
+++ b/.github/workflows/corne-choc.yml
@@ -1,4 +1,4 @@
-name: 'Corne MX'
+name: 'Corne Choc'
 on: workflow_dispatch
 jobs:
   build:
@@ -7,5 +7,5 @@ jobs:
     with:
       board: '["nice_nano_v2"]'
       shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view"]'
-      alphas: '["qwerty"]'
+      alphas: '["Workman"]'
       kconfig: '["CONFIG_BT_CTLR_TX_PWR_PLUS_8=y\nCONFIG_ZMK_SLEEP=y\nCONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000\nCONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1\nCONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5"]'
